<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"

        tools:context=".MainActivity"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            app:srcCompat = "@drawable/ic_store"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service"

            style="@style/Widget.TipTime.TextView"
            android:importantForAccessibility="no"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"

            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf = "@id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent"

            android:hint= "@string/cost"
            android:layout_marginStart="16dp"
            style="@style/Widget.TipTime.TextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_text"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="numberDecimal"
                style="@style/Widget.TipTime.TextView"/>


        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ic_service"
            android:src="@drawable/ic_service"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/service_quest"
            app:layout_constraintBottom_toBottomOf="@id/service_quest"
            android:importantForAccessibility="no"
            style="@style/Widget.TipTime.TextView"
            />

        <TextView
            android:id="@+id/service_quest"
            android:text="@string/servicequest"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="@id/cost_of_service"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service"

            android:layout_marginTop="16dp"
            style="@style/Widget.TipTime.TextView"
            />

        <RadioGroup
            android:id="@+id/tip_options"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="@id/service_quest"
            app:layout_constraintTop_toBottomOf="@id/service_quest"

            android:checkedButton="@id/option_twenty_percent"
            android:orientation="vertical"
            style="@style/Widget.TipTime.TextView">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:text="@string/amazing"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                style="@style/Widget.TipTime.TextView"
                />

            <RadioButton
                android:id="@+id/option_eighteen_percent"
                android:text="@string/good"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                style="@style/Widget.TipTime.TextView"
                />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                android:text="@string/ok"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                style="@style/Widget.TipTime.TextView"
                />
        </RadioGroup>

        <ImageView
            android:id="@+id/ic_round_up"
            android:src="@drawable/ic_round_up"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_up_switch"
            app:layout_constraintBottom_toBottomOf="@id/round_up_switch"

            android:importantForAccessibility="no"
            style="@style/Widget.TipTime.TextView"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            android:text="@string/round"

            android:layout_width="0dp"
            android:layout_height="wrap_content"


            app:layout_constraintStart_toEndOf="@id/ic_round_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tip_options"
            android:layout_marginStart="16dp"

            style="@style/Widget.TipTime.TextView"
            android:checked="true"
            />

        <Button
            android:id="@+id/calculate_button"
            android:text="@string/calculate"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/round_up_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch"
            />

        <TextView
            android:id="@+id/tip_result"
            tools:text="Tip Amount: $10"
            android:text="@string/tip_amount"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            android:layout_marginTop="8dp"

            style="@style/Widget.TipTime.TextView"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>